<resources>
    <string name="app_name">Phòng trọ tốt</string>

    <!--change language-->
    <string name="change_language_title">Change language</string>

    <!--untranslatable-->
    <string name="language_english" translatable="false">English</string>
    <string name="language_vietnamese" translatable="false">Tiếng Việt</string>

    <string-array name="language_names">
        <item>@string/language_english</item>
        <item>@string/language_vietnamese</item>
    </string-array>

    <string name="language_english_code" translatable="false">en</string>
    <string name="language_vietnamese_code" translatable="false">vi</string>

    <string-array name="language_codes">
        <item>@string/language_english_code</item>
        <item>@string/language_vietnamese_code</item>
    </string-array>

    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_change_language">@string/change_language_title</string>
    <string name="pick_address">Pick address</string>
    <string name="hint_location">Find your location</string>
    <string name="user_location_permission_explanation" />
    <string name="user_location_permission_not_granted">Location permission not granted</string>
    <string name="select_province_city">Select province, city</string>
    <string name="select_district">Select district</string>
    <string name="select_ward">Select ward</string>
    <string name="images">Images</string>
    <string name="saved">Saved</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login">Login</string>
    <string name="register_account">Register account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="user_name">User name</string>
    <string name="register_successfully">Register successfully</string>
    <string name="back_to_login">Back to login</string>
    <string name="register">Register</string>
    <string name="min_length_name_is_3">Min length of name is 3!</string>
    <string name="min_length_password_is_6">Min length of password is 6!</string>
    <string name="invalid_email_address">Invalid email address!</string>
    <string name="processing">Processing</string>
    <string name="please_wait">Please wait…</string>
    <string name="undefined_error">Undefined error</string>
    <string name="login_successfully">Login successfully</string>
    <string name="loading">Loading…</string>
    <string name="require_login">Require login</string>
    <string name="require_login_to_see_saved_room">To view saved room(s), you must be logged in!</string>
    <string name="ok">OK</string>
    <string name="logout">Logout</string>
    <string name="sure_logout">Are you sure want to log out?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="require_login_description">To restricted spam, scam, this function requires you must be logged in!</string>
    <string name="cancel">Cancel</string>
    <string name="not_sign_in">Not logged in</string>
    <string name="price_vnd_per_month">%s VND/tháng</string>
    <string name="search">Search</string>
    <string name="post_room_failed">Post failed</string>
    <string name="post_room_successfully">Post successfully</string>
    <string name="upload_image_done">Upload image complete</string>
    <string name="posting_room">Posting room</string>
    <string name="search_ellipsis">Search…</string>
    <string name="geocode_no_results">Geocode no resuls</string>
    <string name="must_login">You must login first to view profile</string>
    <string name="notification_cannot_upload_image">2/3, cannot upload image</string>
    <string name="notification_channel_description">%s notification channel</string>
    <string name="check_in_post_room_manager">3/3, check in post room manager</string>
    <string name="image">Image %d</string>
    <string name="posted_date">Posted date: %s</string>
    <string name="detail_price">$ %s VND</string>
    <string name="view_all">View all</string>
    <string name="newest">Newest</string>
    <string name="watch_more">Watch more</string>
    <string name="change_province">Change province, city</string>
    <string name="you_must_login_to_perform_this_function">You must login to perform this function!</string>
    <string name="remove_from_saved_list_successfully">Remove from saved list successfully</string>
    <string name="add_to_saved_list_successfully">Add to saved list successfully</string>
    <string name="facebook_login_cancelled">Facebook login cancelled</string>
    <string name="facebook_login_errror">Facebook login error: %s</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="choose_avatar">Choose avatar</string>
    <string name="empty_saved_room">Your saved list is empty</string>
    <string name="select_at_least_3_photos">Please select at least 3 photos!</string>
    <string name="display_relative_location">Display relative location</string>
    <string name="detail">Detail</string>
    <string name="comment">Comment</string>
    <string name="related">Related</string>
    <string name="have_not_camera">Your device does not support camera</string>
    <string name="home_page">Home page</string>
    <string name="post">Post</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid latitude longitude</string>
    <string name="no_address_found">No address found</string>
    <string name="empty_comment">Empty comment</string>
    <string name="invalid_comment">Min length of comment is %d</string>
    <string name="add_comment_successfully">Add comment successfully</string>
    <string name="have_not_camera_app">Your device does not have camera app</string>
    <string name="post_room">Post room</string>
    <string name="must_select_a_category">Please select category</string>
    <string name="selected">Selected</string>
    <string name="other_selection">Other selection</string>
    <string name="must_provide_address">Please provide address</string>
    <string name="must_provide_lat">Please provide latitude</string>
    <string name="invalid_lat_range">Latitude must be in -90..90</string>
    <string name="invalid_format_lat">Invalid format</string>
    <string name="must_provide_lng">Please provide longitude</string>
    <string name="invalid_lng_range">Longitude must be in -180..180</string>
    <string name="invalid_format_lng">Invalid format</string>
    <string name="select_province_before">Select province before</string>
    <string name="select_district_before">Select district before</string>
    <string name="must_provide_full_address">Please provide full address</string>
    <string name="price_too_low">Too low price. Please change to actual price</string>
    <string name="price_too_high">Too high price. Please change to actual price</string>
    <string name="invalid_size">Invalid size</string>
    <string name="too_short_title">Too short title</string>
    <string name="invalid_phone">Invalid phone format. Please input again!</string>
    <string name="must_provide_full_info">Please provide full information!</string>
    <string name="select_category">Select category</string>
    <string name="add_address">Add address</string>
    <string name="add_image">Add image</string>
    <string name="add_info">Add information</string>
    <string name="start_navigation">Start navigation</string>
    <string name="email_ellipsis">Email…</string>
    <string name="address_ellipsis">Address…</string>
    <string name="posted_rooms">Posted room</string>
    <string name="take_photo">Take photo</string>
    <string name="select_image_gallery">Select gallery image</string>
    <string name="select_image_or_take_photo">Select image / Take photo</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="title">Title</string>
    <string name="select_suggest_title">Select suggest title</string>
    <string name="add_description">Add description</string>
    <string name="contact_phone_number">Contact phone number</string>
    <string name="contact">Contact:</string>
    <string name="call">Call</string>
    <string name="send_sms">Send sms</string>
    <string name="province_city">PROVINCE, CITY (*):</string>
    <string name="Longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="district">DISTRICT (*):</string>
    <string name="ward">WARD (*):</string>
    <string name="street_number_house_number">Street number, house number (*):</string>
    <string name="view_profile">View profile</string>
    <string name="should_grant_location_permission">You should grant location permission</string>
    <string name="location_you_select">Location you select</string>
    <string name="location">Location</string>
    <string name="current_location">Current location</string>
    <string name="nearby">Nearby</string>
    <string name="available">Available</string>
    <string name="view_count">View count</string>
    <string name="available_yes">Yes</string>
    <string name="available_no">No</string>
    <string name="select_options">Options</string>
    <string name="delete_comment">Delete comment</string>
    <string name="edit_comment">Edit comment</string>
    <string name="sure_delete_comment">Are you sure want to delete this comment?</string>
    <string name="delete_comment_successfully">Delete comment successfully</string>
    <string name="edit_comment_successfully">Edit comment successfully</string>
    <string name="add_saved">Add to saved list</string>
    <string name="remove_saved">Remove from saved list</string>
    <string name="share">Share</string>
    <string name="error">Error: %s</string>
    <string name="not_found">Not found</string>
    <string name="filter">Filter</string>
    <string name="limit_number">Limit number</string>
    <string name="sort_posted_date">Sort posted date</string>
    <string name="sort_price">Sort price</string>
    <string name="sort_view_count">Sort view count</string>
    <string name="select_price">Select price (1_000VND)</string>
    <string name="asc">Ascending</string>
    <string name="desc">Descending</string>
    <string name="apply_filter">Apply filter</string>
    <string name="approved">Approved</string>
    <string name="pending">Peding</string>
    <string name="delete_room_successfully">Delete room successfully</string>


</resources>
