<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home_page" />

        <item
            android:id="@+id/nav_post"
            android:icon="@drawable/ic_cloud_upload_black_24dp"
            android:title="@string/post" />

        <item
            android:id="@+id/nav_saved"
            android:icon="@drawable/ic_bookmark_white_24dp"
            android:title="@string/saved" />


        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/login" />

        <item
            android:id="@+id/nav_posted_room"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/posted_rooms" />

    </group>


</menu>
