<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    android:fillViewport="true"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fafafa"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f2e8e8"
            android:fontFamily="@font/nunito_sans"
            android:padding="8dp"
            android:text="TỈNH, THÀNH PHỐ(*):"
            android:textColor="#424242"
            android:textSize="16sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/tv_province"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:fontFamily="@font/nunito_sans"
                android:padding="12dp"
                android:text="@string/select_province_city"
                android:textColor="@color/colorError"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="@id/layout_province"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_nvgt" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f2e8e8"
            android:fontFamily="@font/nunito_sans"
            android:padding="8dp"
            android:text="QUẬN, HUYỆN(*):"
            android:textSize="16sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_districts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/tv_district"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:fontFamily="@font/nunito_sans"
                android:padding="12dp"
                android:text="@string/select_district"
                android:textColor="@color/colorError"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/imageView2"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="@id/layout_districts"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_nvgt" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f2e8e8"
            android:fontFamily="@font/nunito_sans"
            android:padding="8dp"
            android:text="XÃ, PHƯỜNG, THỊ TRẤN(*):"
            android:textSize="16sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_wards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:id="@+id/tv_ward"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:fontFamily="@font/nunito_sans"
                android:padding="12dp"
                android:text="@string/select_ward"
                android:textColor="@color/colorError"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/imageView6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="@id/layout_wards"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_nvgt" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_text_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="số đường, số nhà (*):"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/image_current_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/nunito_sans"
                    android:inputType="text"
                    android:textColor="#424242" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/image_current_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_my_location_black_24dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_lat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="Vĩ độ"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/nunito_sans"
                android:inputType="numberSigned|numberDecimal"
                android:textColor="#424242" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_lng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint="Kinh độ"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/nunito_sans"
                android:inputType="numberSigned|numberDecimal"
                android:textColor="#424242" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>